FEAT: can display trailers; fix the GridView scroll issue; can display reviews in an ExpandableHeightListView with a nice layout (if no reviews, will indicate that); fix the async task issues with overwriting the previous JsonString.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(include: 'Parse-*.jar', dir: 'libs')
     compile files('libs/Parse-1.10.2.jar')
+    compile 'com.github.paolorotolo:expandableheightlistview:1.0.0'
 }
