--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-
             android:label="@string/app_name"
-            android:configChanges="layoutDirection|screenSize">
+            android:configChanges="layoutDirection|screenSize"
+            android:launchMode="singleTop">
 
             <!-- android:screenOrientation="portrait"> -->
             <intent-filter>
