--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,16 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:configChanges="layoutDirection|screenSize"
-            android:launchMode="singleTop">
-
+           >
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable" />
             <!-- android:screenOrientation="portrait"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".MovieDetailActivity"
@@ -35,6 +37,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="linyingwang.popularmovies.MainActivity" />
+
         </activity>
 
     </application>
