--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="linyingwang.popularmovies"
-    >
+    package="linyingwang.popularmovies" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,37 +10,38 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
             android:configChanges="layoutDirection|screenSize"
-           >
-            <meta-data android:name="android.app.searchable"
-                       android:resource="@xml/searchable" />
+            android:label="@string/app_name" >
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
             <!-- android:screenOrientation="portrait"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MovieDetailActivity"
-
+            android:configChanges="layoutDirection|screenSize"
             android:label="@string/title_activity_movie_detail"
-            android:parentActivityName=".MainActivity"
-            android:configChanges="layoutDirection|screenSize">
+            android:parentActivityName=".MainActivity" >
 
             <!-- android:screenOrientation="portrait"> -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="linyingwang.popularmovies.MainActivity" />
-
         </activity>
-
+        <activity
+            android:name=".About"
+            android:label="@string/title_activity_about" >
+        </activity>
     </application>
 
 </manifest>
